Add Social Links

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           computer science and building innovative digital solutions.
         </p>
         <span class="head-btns">
-          <a href=""><i class="fa-brands fa-github"></i>Github</a>
-          <a href=""><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
-          <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
+          <a href="https://github.com/bilal3110" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
+          <a href="https://www.linkedin.com/in/bilal-aqeel-b7556321b/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+          <a href="https://www.instagram.com/webdev.by.bilal/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
         </span>
       </div>
     </main>
@@ -368,11 +368,11 @@
       <h1 id="s-head">Keep In Touch</h1>
       <p id="c-sub">Got a project in mind? I’d love to hear about it!</p>
       <div class="contact-list">
-          <a href=""><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
-          <a href=""><i class="fa-regular fa-envelope"></i>Email</a>
-          <a href=""><i class="fa-brands fa-github"></i>Github</a>
-          <a href=""><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
-          <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
+          <a href="https://wa.me/923349877300"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
+          <a href="mailto:bilalaqeel.dev@gmail.com"><i class="fa-regular fa-envelope"></i>Email</a>
+          <a href="https://github.com/bilal3110" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
+          <a href="https://www.linkedin.com/in/bilal-aqeel-b7556321b/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+          <a href="https://www.instagram.com/webdev.by.bilal/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
       </div>
     </section>
 
