Add Social Links

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               and instantly receive identification results using a trained AI
               model.
             </p>
-            <a href="#">View Code</a>
+            <a href="https://github.com/bilal3110/PlantRecognitionSystem" target="_blank">View Code</a>
           </div>
           <div class="click-hint">Hover to explore</div>
         </div>
@@ -326,7 +326,7 @@
               tracking and deal updates, it replaces registers and highlights my
               skills in backend, API integration, and SaaS development.
             </p>
-            <a href="#">View Code</a>
+            <a href="https://github.com/bilal3110/RealEstateSystem" target="_blank">View Code</a>
           </div>
           <div class="click-hint">Hover to explore</div>
         </div>
@@ -340,7 +340,7 @@
               progress. It enhanced my skills in developing scalable and
               efficient web applications.
             </p>
-            <a href="#">View Code</a>
+            <a href="https://github.com/bilal3110/LMS/tree/project-fix" target="_blank">View Code</a>
           </div>
           <div class="click-hint">Hover to explore</div>
         </div>
@@ -353,13 +353,13 @@
               and making bookings. The design ensures a seamless user
               experience, making the booking process quick and efficient.
             </p>
-            <a href="#">View Code</a>
+            <a href="https://github.com/bilal3110/Hotel-Booking-Site" target="_blank">View Code</a>
           </div>
           <div class="click-hint">Hover to explore</div>
         </div>
       </div>
       <div class="project-btn">
-        <a href="">View More</a>
+        <a href="https://github.com/bilal3110" target="_blank">View More</a>
       </div>
     </section>
 
