--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
         <h3>Hey there!, I'm-</h3>
         <h1>Bilal Aqeel</h1>
         <p>
-          A self‑taught software engineer driven by a relentless passion for
-          computer science and building innovative digital solutions.
+          A self‑taught software developer helping businesses automate workflows with custom web solutions
         </p>
         <span class="head-btns">
-          <a href="https://github.com/bilal3110" target="_blank"
+          <a href="https://calendly.com/bilalaqeel-dev/30min" target="_blank">
+            <i class="fa-solid fa-calendar-days"></i>Book a Free Consultation</a>
+          <!-- <a href="https://github.com/bilal3110" target="_blank"
             ><i class="fa-brands fa-github"></i>Github</a
           >
           <a
@@ -80,7 +81,7 @@
           >
           <a href="https://www.instagram.com/webdev.by.bilal/" target="_blank"
             ><i class="fa-brands fa-instagram"></i>Instagram</a
-          >
+          > -->
         </span>
       </div>
     </main>
